<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Impfprüfer</string>

  <string name="onboarding_welcome_header">Willkommen in der Prüf-App für Corona-Impfungen</string>
  <string name="onboarding_welcome_subheader">Finden Sie in wenigen Sekunden heraus, ob eine Person vollständig geimpft ist.</string>
  <string name="onboarding_welcome_encryption_header">Sicherer Datenaustausch</string>
  <string name="onboarding_welcome_encryption_text">Gemäß DSGVO werden keine empfindlichen Daten gespeichert. Sie sehen nur die nötigsten Informationen.</string>

  <string name="onboarding_info_title_1">Erster Schritt: Scannen Sie das Prüfzertifikat mit der App</string>
  <string name="onboarding_info_text_1">Halten Sie das Handy über den QR-Code und scannen Sie diesen mit der App. Die Daten werden datenschutzkonform übermittelt und können nicht gespeichert werden. Sie sehen sofort alle nötigen Informationen in der App. Und das auch, wenn Sie mal kein Internet haben.</string>
  <string name="onboarding_info_title_2">Zweiter Schritt: Überprüfen Sie die Identität mit einem amtlichen Ausweis</string>
  <string name="onboarding_info_text_2">Sie sehen nur den Impfstatus sowie Namen und Geburtsdatum der geimpften Person. Zur sicheren Identifikation gleichen Sie bitte die Daten mit einem Personalausweis oder Reisepass ab.</string>
  <string name="onboarding_consent_title">Zustimmung für die Nutzung</string>
  <string name="onboarding_consent_text">Um die App zu nutzen, müssen Sie bestätigen, dass Sie den AGBs zustimmen und die Datenschutzerklärung zur Kenntnis genommen haben.</string>
  <string name="onboarding_continue_button_text">Weiter</string>
  <string name="onboarding_consent_continue_button_text">Bestätigen</string>

  <string name="main_header">Prüf-App</string>
  <string name="main_check_cert_header">Impfschutz prüfen</string>
  <string name="main_check_cert_info">Scannen Sie jetzt das Prüfzertifikat. Sie sehen sofort, ob die Person geimpft ist.</string>
  <string name="main_check_cert_button_text">Zertifikat scannen</string>
  <string name="main_availability_header">Offline-Modus</string>
  <string name="main_availability_info">Stellen Sie sicher, dass die App auf dem aktuellsten Stand ist. Dazu verbinden Sie Ihr Gerät kurz mit dem Internet.</string>
  <string name="main_availability_status">Auf dem aktuellsten Stand</string>
  <string name="main_availability_last_update">Letztes Update: %1$s</string>

  <string name="validation_result_button">Nächstes Zertifikat scannen</string>
  <string name="validation_result_birth_date">Geboren am %1$s</string>

  <string name="validation_result_success_title">Impfschutz gültig</string>
  <string name="validation_result_success_text">Gleichen Sie jetzt folgende Daten mit dem Personalausweis oder Reisepass ab.</string>

  <string name="validation_result_incomplete_title">Impfschutz nicht vollständig</string>
  <string name="validation_result_incomplete_text">Das geprüfte Zertifikat weist keine vollständige Impfung nach.</string>

  <string name="validation_result_failure_title">Prüfung nicht erfolgreich</string>
  <string name="validation_result_failure_text">Das kann zwei Gründe haben:</string>
  <string name="validation_result_failure_info1_title">Impfnachweis nicht gefunden</string>
  <string name="validation_result_failure_info1_text">Es sind keine Daten auf dem Prüfzertifikat gespeichert. Sollten Sie sich im Offline-Modus befinden, aktualisieren Sie die App. </string>
  <string name="validation_result_failure_info2_title">Impfnachweis abgelaufen</string>
  <string name="validation_result_failure_info2_text">Das Prüfzertifikat ist nicht mehr gültig. Der aktuelle Status kann in der Impf-Nachweis-App eingesehen werden.</string>

  <string name="loading_text">Wird geprüft</string>
</resources>
