<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/main_header_textview"
      style="@style/Header.OnBackground.Standard"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginStart="@dimen/grid_three"
      android:layout_marginTop="@dimen/grid_six"
      android:layout_marginEnd="@dimen/grid_eight"
      android:text="@string/main_header" />

    <ImageButton
      android:id="@+id/main_settings_imagebutton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_marginTop="@dimen/grid_six"
      android:layout_marginEnd="@dimen/grid_two"
      android:adjustViewBounds="true"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:padding="@dimen/grid_one"
      android:src="@drawable/questionmark_black"
      android:theme="@style/VaccinationAppTheme.DarkControlHighlight"
      tools:ignore="ContentDescription" />

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/main_check_cert_cardview"
      style="@style/VaccinationCardView.Elevated"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/main_header_textview"
      android:layout_marginHorizontal="@dimen/grid_three"
      android:layout_marginTop="@dimen/grid_four"
      app:cardBackgroundColor="@color/info70">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/main_check_cert_header_textview"
          style="@style/Header.OnInfo.Big"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/grid_three"
          android:layout_marginTop="@dimen/grid_two_half"
          android:text="@string/main_check_cert_header"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/main_check_cert_info_textview"
          style="@style/DefaultText.OnInfo"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/grid_half"
          android:text="@string/main_check_cert_info"
          app:layout_constraintEnd_toEndOf="@id/main_check_cert_header_textview"
          app:layout_constraintStart_toStartOf="@id/main_check_cert_header_textview"
          app:layout_constraintTop_toBottomOf="@id/main_check_cert_header_textview" />

        <com.google.android.material.button.MaterialButton
          android:id="@+id/main_check_cert_button"
          style="@style/PrimaryButton.Light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/grid_eightteen"
          android:layout_marginBottom="@dimen/grid_five"
          android:text="@string/main_check_cert_button_text"
          app:icon="@drawable/scan_qr"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/main_check_cert_info_textview" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/main_availability_cardview"
      style="@style/VaccinationCardView.Level"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/main_check_cert_cardview"
      android:layout_marginHorizontal="@dimen/grid_three"
      android:layout_marginTop="@dimen/grid_five"
      android:layout_marginBottom="@dimen/grid_three"
      app:cardBackgroundColor="@color/brandAccent10">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/main_availability_header_textview"
          style="@style/Header.OnBackground.Standard"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/grid_two_half"
          android:layout_marginTop="@dimen/grid_two_half"
          android:layout_marginEnd="@dimen/grid_one"
          android:text="@string/main_availability_header"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/main_availability_info_textview"
          style="@style/DefaultText.OnBackground"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/grid_two_half"
          android:layout_marginTop="@dimen/grid_one_half"
          android:text="@string/main_availability_info"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/main_availability_header_textview" />

        <ImageView
          android:id="@+id/main_availability_status_imageview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/grid_two_half"
          android:layout_marginEnd="@dimen/grid_half"
          android:adjustViewBounds="true"
          android:src="@drawable/availability_success"
          app:layout_constraintBottom_toBottomOf="@id/main_availability_status_textview"
          app:layout_constraintEnd_toStartOf="@id/main_availability_status_textview"
          app:layout_constraintHorizontal_chainStyle="spread_inside"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/main_availability_status_textview"
          tools:ignore="ContentDescription" />

        <TextView
          android:id="@+id/main_availability_status_textview"
          style="@style/DefaultText.OnBackground"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/grid_three_half"
          android:layout_marginEnd="@dimen/grid_two_half"
          android:text="@string/main_availability_status"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/main_availability_status_imageview"
          app:layout_constraintTop_toBottomOf="@id/main_availability_info_textview" />

        <TextView
          android:id="@+id/main_availability_last_update_textview"
          style="@style/DefaultText.OnBackground70"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="@dimen/grid_two_half"
          android:layout_marginTop="@dimen/grid_three_half"
          android:layout_marginBottom="@dimen/grid_two_half"
          android:text="@string/main_availability_last_update"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/main_availability_status_textview" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

  </RelativeLayout>

</ScrollView>
